--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@cashu/cashu-ts": "^1.0.0-rc.5",
+    "@cashu/cashu-ts": "1.0.0-rc.5",
     "@chakra-ui/checkbox": "^2.3.2",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/image": "^2.1.0",
@@ -22,7 +22,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
-    "@nostr-dev-kit/ndk": "^2.8.2",
+    "@nostr-dev-kit/ndk": "2.8.2",
     "@xterm/addon-fit": "^0.10.0",
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
@@ -33,7 +33,7 @@
     "framer-motion": "^11.11.1",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
-    "nostr-tools": "^2.6.0",
+    "nostr-tools": "2.6.0",
     "npm": "^10.8.3",
     "papaparse": "^5.4.1",
     "prettier": "^3.3.3",
