--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
     "@nostr-dev-kit/ndk": "2.8.2",
+    "@nostr-dev-kit/ndk-wallet": "^0.3.15",
     "@xterm/addon-fit": "^0.10.0",
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
@@ -32,10 +33,11 @@
     "eventsource-parser": "^2.0.1",
     "firebase": "^10.12.4",
     "framer-motion": "^11.11.1",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "nostr-tools": "2.6.0",
-    "npm": "^10.8.3",
+    "npm": "^10.9.2",
     "papaparse": "^5.4.1",
     "prettier": "^3.3.3",
     "prismjs": "^1.29.0",
