--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
-    "@nostr-dev-kit/ndk": "2.8.2",
+    "@nostr-dev-kit/ndk": "^2.10.7",
     "@nostr-dev-kit/ndk-wallet": "^0.3.15",
     "@xterm/addon-fit": "^0.10.0",
     "bech32": "^2.0.0",
