--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@chakra-ui/react": "^2.10.1",
     "@chakra-ui/system": "^2.6.2",
     "@chakra-ui/table": "^2.1.0",
+    "@coinbase/wallet-sdk": "^4.2.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@monaco-editor/react": "^4.6.0",
@@ -30,6 +31,7 @@
     "buffer": "^6.0.3",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "crypto-js": "^4.2.0",
+    "ethers": "^6.13.4",
     "eventsource-parser": "^2.0.1",
     "firebase": "^10.12.4",
     "framer-motion": "^11.11.1",
