--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "buffer": "^6.0.3",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "crypto-js": "^4.2.0",
-    "eventsource-parser": "^2.0.1",
     "firebase": "^11.1.0",
     "framer-motion": "^11.11.1",
     "i": "^0.3.7",
@@ -48,6 +47,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-live": "^4.1.8",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
     "react-simple-code-editor": "^0.14.1",
@@ -67,6 +67,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "rollup-plugin-visualizer": "^5.14.0",
     "vite": "^5.3.4",
     "vite-plugin-pwa": "^0.20.1"
   }
