--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "buffer": "^6.0.3",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "crypto-js": "^4.2.0",
+    "d3-delaunay": "^6.0.4",
     "firebase": "^11.1.0",
     "framer-motion": "^11.11.1",
     "i": "^0.3.7",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "noisejs": "^2.1.0",
     "nostr-tools": "2.6.0",
     "npm": "^10.9.2",
     "papaparse": "^5.4.1",
@@ -44,6 +46,7 @@
     "react": "^18.3.1",
     "react-bash": "^1.6.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^5.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -54,6 +57,7 @@
     "react-speech-recognition": "^3.10.0",
     "react-syntax-highlighter": "^15.5.0",
     "regenerator-runtime": "^0.14.1",
+    "simplex-noise": "^4.0.3",
     "styled-components": "^6.1.12",
     "web-streams-polyfill": "^4.0.0",
     "xterm": "^5.3.0",
