--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "d3-delaunay": "^6.0.4",
     "firebase": "^11.1.0",
     "framer-motion": "^11.11.1",
+    "highlight.js": "^11.11.1",
     "i": "^0.3.7",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
@@ -59,6 +60,7 @@
     "regenerator-runtime": "^0.14.1",
     "simplex-noise": "^4.0.3",
     "styled-components": "^6.1.12",
+    "vite-plugin-prismjs": "^0.0.11",
     "web-streams-polyfill": "^4.0.0",
     "xterm": "^5.3.0",
     "zustand": "^4.5.5"
