--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "vite-plugin-prismjs": "^0.0.11",
     "web-streams-polyfill": "^4.0.0",
     "xterm": "^5.3.0",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.5",
+    "@coinbase/onchainkit": "latest"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
