--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@cashu/cashu-ts": "1.0.0-rc.5",
+    "@cashu/cashu-ts": "2.1",
     "@chakra-ui/checkbox": "^2.3.2",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/image": "^2.1.0",
@@ -23,9 +23,10 @@
     "@coinbase/onchainkit": "^0.38.15",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@firebase/vertexai": "^1.2.4",
     "@monaco-editor/react": "^4.6.0",
     "@nostr-dev-kit/ndk": "^2.10.7",
-    "@nostr-dev-kit/ndk-wallet": "^0.3.15",
+    "@nostr-dev-kit/ndk-wallet": "^0.7.0",
     "@wagmi/chains": "^1.8.0",
     "@xterm/addon-fit": "^0.10.0",
     "bech32": "^2.0.0",
@@ -41,7 +42,7 @@
     "lodash": "^4.17.21",
     "noisejs": "^2.1.0",
     "nostr-tools": "2.6.0",
-    "npm": "^10.9.2",
+    "npm": "^10.9.4",
     "papaparse": "^5.4.1",
     "prettier": "^3.3.3",
     "prismjs": "^1.29.0",
