--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "regenerator-runtime": "^0.14.1",
     "simplex-noise": "^4.0.3",
     "styled-components": "^6.1.12",
+    "tone": "^15.1.22",
     "vite-plugin-prismjs": "^0.0.11",
     "web-streams-polyfill": "^4.0.0",
     "xterm": "^5.3.0",
